msggrep: Add new options -W and -S.
Reported at <https://savannah.gnu.org/bugs/?40489>.

* gettext-tools/src/msggrep.c (workflow_flags, sticky_flags): New variables.
(main): Initialize them. Handle the options -W and -S.
(usage): Document the -W and -S options.
(is_message_selected_no_invert): Return true if one of the specified workflow
flags or one of the specified sticky flags is set.
* gettext-tools/tests/msggrep-12: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.
* gettext-tools/doc/msggrep.texi: Document the -W and -S options.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,11 @@ Version 0.26 - July 2025
     - xgettext now recognizes the \c, \u, and \U escape sequences in dollar-
       single-quoted strings $'...'.
 
+# Improvements for translators:
+  * msggrep:
+    - msggrep accepts two new options -W/--workflow-flags and -S/--sticky-flags
+      that allow to select only messages that have a specified flag.
+
 # Bug fixes:
   - The AM_GNU_GETTEXT macro now rejects the dysfunctional gettext() function
     in libc of Solaris 11.[0-3], Solaris OpenIndiana, and Solaris OmniOS.
