xgettext: Check msgid and msgid_plural for compatibility as format strings.
* gettext-tools/src/if-error.h: Include <stdarg.h>.
(if_verror): New declaration.
* gettext-tools/src/if-error.c (if_verror): New function, extracted from
if_error.
(if_error): Invoke it.
* gettext-tools/src/xg-check.h (xgettext_check_message_list): Renamed from
syntax_check_message_list.
* gettext-tools/src/xg-check.c: Include format.h, if-error.h.
(struct formatstring_error_logger_locals): New type.
(formatstring_error_logger, format_check_message): New functions.
(xgettext_check_message_list): Renamed from syntax_check_message_list. Invoke
also format_check_message.
* gettext-tools/src/xgettext.c (main): Invoke xgettext_check_message_list
instead of syntax_check_message_list.
* gettext-tools/tests/xgettext-19: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,15 @@ Version 0.26 - July 2025
     - xgettext now recognizes the \c, \u, and \U escape sequences in dollar-
       single-quoted strings $'...'.
 
+# Improvements for maintainers:
+  * xgettext:
+    - When extracting a message with plural that is some format string,
+      xgettext now verifies that the msgid and msgid_plural are compatible
+      as format strings.  For most format string types, this still allows
+      omitting from msgid a placeholder that is used in msgid_plural.  But
+      when a placeholder is used in both msgid and msgid_plural, its type
+      must be the same in both.
+
 # Improvements for translators:
   * msggrep:
     - msggrep accepts two new options -W/--workflow-flags and -S/--sticky-flags
