xgettext: Warn when a message contains an URL or email address.
Reported by Arsen Arsenović <arsen@aarsen.me>
at <https://savannah.gnu.org/bugs/?67000>.

* gettext-tools/src/xg-check.c: Include c-strstr.h.
(SIZEOF): New macro.
(string_has_url, message_has_url, string_has_email, message_has_email,
url_check_message): New functions.
(xgettext_check_message_list): Invoke url_check_message.
* gettext-tools/tests/xgettext-20: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,8 @@ Version 0.26 - July 2025
       omitting from msgid a placeholder that is used in msgid_plural.  But
       when a placeholder is used in both msgid and msgid_plural, its type
       must be the same in both.
+    - xgettext now suggests a refactoring when a translatable string
+      contains an URL or email address.
 
 # Improvements for translators:
   * msggrep:
