--- a/gettext-tools/doc/gettext.texi
+++ b/gettext-tools/doc/gettext.texi
@@ -461,6 +461,7 @@ Individual Programming Languages
 * Lua::                         Lua
 * Pascal::                      Pascal - Free Pascal Compiler
 * Modula-2::                    Modula-2
+* OCaml::                       OCaml
 * Smalltalk::                   GNU Smalltalk
 * Vala::                        Vala
 * wxWidgets::                   wxWidgets library
@@ -2522,6 +2523,7 @@ at runtime (or possibly at compile time, if the compiler supports that).
 @cindex Lua, string concatenation
 @cindex Modula-2, string concatenation
 @cindex D, string concatenation
+@cindex OCaml, string concatenation
 @cindex Smalltalk, string concatenation
 @cindex Vala, string concatenation
 @cindex Perl, string concatenation
@@ -2566,6 +2568,9 @@ In Modula-2, string concatenation is denoted by the @samp{+} operator.
 @item
 In D, string concatenation is denoted by the @samp{~} operator.
 @c Reference: https://dlang.org/spec/expression.html#cat_expressions
+@item
+In OCaml, string concatenation is denoted by the @samp{^} operator.
+@c Reference: https://ocaml.org/manual/5.3/api/String.html#concat
 @item
 In Smalltalk, string concatenation is denoted by the @samp{,} operator.
 @c Reference: https://rmod-files.lille.inria.fr/FreeBooks/ByExample/14%20-%20Chapter%2012%20-%20Strings.pdf
@@ -10789,6 +10794,7 @@ that language, and to combine the resulting files using @code{msgcat}.
 * Pascal::                      Pascal - Free Pascal Compiler
 * Modula-2::                    Modula-2
 * D::                           D
+* OCaml::                       OCaml
 * Smalltalk::                   GNU Smalltalk
 * Vala::                        Vala
 * wxWidgets::                   wxWidgets library
@@ -10821,6 +10827,7 @@ that language, and to combine the resulting files using @code{msgcat}.
 @include lang-pascal.texi
 @include lang-modula2.texi
 @include lang-d.texi
+@include lang-ocaml.texi
 @include lang-smalltalk.texi
 @include lang-vala.texi
 @include lang-wxwidgets.texi
