--- a/gettext-tools/doc/xgettext.texi
+++ b/gettext-tools/doc/xgettext.texi
@@ -270,6 +270,7 @@ awk,
 Lua,
 Modula-2,
 D,
+OCaml,
 Vala,
 Tcl,
 Perl,
@@ -335,6 +336,7 @@ awk,
 Lua,
 Modula-2,
 D,
+OCaml,
 Vala,
 Tcl,
 Perl,
@@ -502,6 +504,7 @@ awk,
 Lua,
 Modula-2,
 D,
+OCaml,
 Vala,
 Tcl,
 Perl,
