--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Version 0.27 - September 2025
+
+# Programming languages support:
+  * OCaml:
+    - xgettext now supports OCaml.
+    - 'msgfmt -c' now verifies the syntax of translations of OCaml format
+      strings.
+
 Version 0.26 - July 2025
 
 # Programming languages support:
