--- a/gettext-tools/examples/README
+++ b/gettext-tools/examples/README
@@ -38,6 +38,7 @@ environment.
     hello-pascal               Pascal
     hello-modula2              Modula-2
     hello-d                    D
+    hello-ocaml                OCaml
     hello-smalltalk            Smalltalk
     hello-tcl                  Tcl
     hello-tcl-tk               Tcl               Tk
@@ -87,6 +88,7 @@ Makefile types:
     hello-pascal               .gmo                    Makefile.am
     hello-modula2              .gmo                    Makefile.am
     hello-d                    .gmo                    Makefile.am
+    hello-ocaml                .gmo                    Makefile.am
     hello-smalltalk            .gmo                    Makefile.am
     hello-perl                 .gmo                    Makefile.am
     hello-php                  .gmo                    Makefile.am
