--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ Version 0.27 - September 2025
     - xgettext now supports OCaml.
     - 'msgfmt -c' now verifies the syntax of translations of OCaml format
       strings.
+    - A new example 'hello-ocaml' has been added.
 
 Version 0.26 - July 2025
 
