libgettextpo: New function po_message_get_format.
Reported by Alexander Potashev <aspotashev@gmail.com> in
<https://savannah.gnu.org/bugs/?67485>.

* gettext-tools/libgettextpo/gettext-po.in.h (po_message_get_format): New
declaration.
* gettext-tools/libgettextpo/gettext-po.c (po_message_get_format): New function.
* gettext-tools/tests/gettextpo-1-prg.c (main): Test the return value of
po_message_get_format. Add a test case of po_message_set_format with value -1.
* gettext-tools/doc/gettext.texi (po_message_t API): Document
po_message_get_format.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,10 @@ Version 0.27 - September 2025
       strings.
     - A new example 'hello-ocaml' has been added.
 
+# libgettextpo library:
+  * The function 'po_message_get_format' now supports distinguishing whether
+    a negative format string mark, such as 'no-c-format', is set or not.
+
 Version 0.26 - July 2025
 
 # Programming languages support:
