libgettextpo: Add API for the workflow flags and the sticky flags.
Reported by Alexander Potashev <aspotashev@gmail.com>
at <https://savannah.gnu.org/bugs/?67470>.

* gettext-tools/src/message.h (format_flag, not_format_p): New declarations.
* gettext-tools/src/message.c (format_flag): New variable.
(not_format_p): New function.
* gettext-tools/src/write-po.c (make_format_description_string): Add comments.
(significant_format_p): Likewise.
* gettext-tools/libgettextpo/gettext-po.in.h (po_flag_iterator_t): New type.
(po_message_has_workflow_flag, po_message_set_workflow_flag,
po_message_workflow_flags_iterator): New declarations.
(po_message_has_sticky_flag, po_message_set_sticky_flag,
po_message_sticky_flags_iterator): New declarations.
(po_flag_iterator_free, po_flag_next): New declarations.
* gettext-tools/libgettextpo/gettext-po.c (struct po_flag_iterator): New type.
(po_message_has_workflow_flag, po_message_set_workflow_flag,
po_message_workflow_flags_iterator): New functions.
(po_message_get_format): Simplify by using not_format_p.
(po_message_has_sticky_flag, po_message_set_sticky_flag,
po_message_sticky_flags_iterator): New functions.
(po_flag_iterator_free, po_flag_next): New functions.
* gettext-tools/tests/gettextpo-1-prg.c (main): Add more test cases.
* gettext-tools/doc/gettext.texi (po_message_t API): Document the new functions.
(po_flag_iterator_t API): New subsection.
* NEWS: Mention the new functions.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,16 @@ Version 0.27 - September 2025
 # libgettextpo library:
   * The function 'po_message_get_format' now supports distinguishing whether
     a negative format string mark, such as 'no-c-format', is set or not.
+  * The new functions
+      po_message_has_workflow_flag
+      po_message_set_workflow_flag
+      po_message_workflow_flags_iterator, po_flag_next, po_flag_iterator_free
+    can be used to manipulate or inspect the workflow flags of a message.
+  * The new functions
+      po_message_has_sticky_flag
+      po_message_set_sticky_flag
+      po_message_sticky_flags_iterator, po_flag_next, po_flag_iterator_free
+    can be used to manipulate or inspect the sticky flags of a messsage.
 
 Version 0.26 - July 2025
 
