Restore syntax highlighting in Emacs 30 or newer.
Reported by Sab Pyrope <sab.pyrope@gmail.com> in
<https://lists.gnu.org/archive/html/bug-gettext/2025-03/msg00017.html>
and by Julien Palard <julien@palard.fr> in
<https://lists.gnu.org/archive/html/bug-gettext/2025-10/msg00000.html>.

It's a regression in Emacs 30, in commit
17e26cf57e18c5df2172a7049591d89fc53b3fb6 .

* gettext-tools/emacs/HACKING: Document how to bisect Emacs regressions.
* gettext-tools/emacs/po-mode.el (po-mode-version-string): Bump to 2.31.
(po-mode): Invoke run-mode-hooks instead of run-hooks.
* NEWS: Mention the fix.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Version 0.27 - September 2025
+Version 0.27 - October 2025
 
 # Programming languages support:
   * OCaml:
@@ -20,6 +20,9 @@ Version 0.27 - September 2025
       po_message_set_sticky_flag
       po_message_sticky_flags_iterator, po_flag_next, po_flag_iterator_free
     can be used to manipulate or inspect the sticky flags of a messsage.
+
+# Emacs PO mode:
+  Restore syntax highlighting in Emacs version 30 or newer.
 
 Version 0.26 - July 2025
 
