--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 0.24.3
+
+* Emacs PO mode:
+  Restore syntax highlighting in Emacs version 30 or newer.
+
 Version 0.24.2 - July 2025
 
 * Bug fixes:
