--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 0.26.1
+
+# Emacs PO mode:
+  Restore syntax highlighting in Emacs version 30 or newer.
+
 Version 0.26 - July 2025
 
 # Programming languages support:
