--- a/gettext-tools/doc/msginit.texi
+++ b/gettext-tools/doc/msginit.texi
@@ -1,5 +1,5 @@
 @c This file is part of the GNU gettext manual.
-@c Copyright (C) 1995-2019 Free Software Foundation, Inc.
+@c Copyright (C) 1995-2025 Free Software Foundation, Inc.
 @c See the file gettext.texi for copying conditions.
 
 @pindex msginit
@@ -77,8 +77,12 @@ Write output to specified PO file.
 @end table
 
 If no output file is given, it depends on the @samp{--locale} option or the
-user's locale setting.  If it is @samp{-}, the results are written to
-standard output.
+user's locale setting.
+
+If the output file already exists, it is merged with the input file,
+as if through @command{msgmerge}.
+
+If it is @samp{-}, the results are written to standard output.
 
 @subsection Input file syntax
 
