xgettext: Rust: Recognize 'gettextrs::gettext' invocations like 'gettext' invocations.
Reported by Schmiddiii <gnu-savannah@schmidhuberj.de>
at <https://savannah.gnu.org/bugs/?67601>.

* gettext-tools/src/x-rust.c (ts_symbol_scoped_identifier): New variable.
(extract_from_function_call): Accept a scoped_identifier as first argument.
(extract_from_node): Allow a scoped_identifier as callee.
(extract_rust): Initialize ts_symbol_scoped_identifier.
* gettext-tools/tests/xgettext-rust-1: Add another test case.
* gettext-tools/tests/xgettext-rust-6: Likewise.
* NEWS: Mention the fix.

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,9 @@ Version 0.27 - October 2025
     - 'msgfmt -c' now verifies the syntax of translations of OCaml format
       strings.
     - A new example 'hello-ocaml' has been added.
+  * Rust:
+    - xgettext now recognizes 'gettextrs::gettext' invocations, like 'gettext'
+      invocations.
 
 # libgettextpo library:
   * The function 'po_message_get_format' now supports distinguishing whether
